# menabrea

./: .gitignore  LICENSE  README.md  bootstrap  initialize
config/node1/: platform_config.json
config/node2/: platform_config.json
config/node3/: platform_config.json
config/qemu/: platform_config.json
layers/meta-em-odp/: README
layers/meta-em-odp/conf/: layer.conf
layers/meta-menabrea/: README
layers/meta-menabrea-app/: README
layers/meta-menabrea-app/conf/: layer.conf
layers/meta-menabrea-drivers/: README
layers/meta-menabrea-drivers/conf/: layer.conf
layers/meta-menabrea-kernel/: README
layers/meta-menabrea-kernel/conf/: layer.conf
layers/meta-menabrea-platform/: README
layers/meta-menabrea-platform-test/: README
layers/meta-menabrea-platform-test/conf/: layer.conf
layers/meta-menabrea-platform/conf/: layer.conf
layers/meta-menabrea-test-harness/: README
layers/meta-menabrea-test-harness/conf/: layer.conf
layers/meta-menabrea/conf/: layer.conf
src/application/: CMakeLists.txt
src/application/deploy_ring_test/: CMakeLists.txt  deploy_ring_test.cc
src/application/dummy_test/: CMakeLists.txt  dummy_test.cc  dummy_test_suite.json
src/application/echo/: CMakeLists.txt  echo.cc
src/application/internode_test/: CMakeLists.txt  internode_test.cc
src/application/local_data_test/: CMakeLists.txt  local_data_test.cc
src/application/message_buffering_test/: CMakeLists.txt  message_buffering_test.cc
src/application/messaging_stress_test/: CMakeLists.txt  messaging_stress_test.cc
src/application/periodic_timer_test/: CMakeLists.txt  periodic_timer_test.cc
src/application/pipeline/: CMakeLists.txt  ingress.cc  ingress.hh  main.cc  man_in_the_middle.cc  man_in_the_middle.hh  pipeline.cc  pipeline.hh  signer.cc  signer.hh  verifier.cc  verifier.hh
src/application/shared_memory_test/: CMakeLists.txt  shared_memory_test.cc
src/application/terminate_test/: CMakeLists.txt  terminate_test.cc
src/application/timer_stress_test/: CMakeLists.txt  timer_stress_test.cc
src/application/timer_test/: CMakeLists.txt  timer_test.cc
src/application/workers_stress_test/: CMakeLists.txt  workers_stress_test.cc
src/drivers/: CMakeLists.txt  Makefile  dummy-ringbuffer.c  pangloss-driver.c
src/platform/: CMakeLists.txt
src/platform-test/: CMakeLists.txt  main.cc
src/platform-test/cases/: CMakeLists.txt
src/platform-test/cases/basic_timing/: basic_timing.cc  basic_timing.hh
src/platform-test/cases/basic_workers/: basic_workers.cc  basic_workers.hh
src/platform-test/cases/message_buffering/: message_buffering.cc  message_buffering.hh
src/platform-test/cases/messaging_performance/: messaging_performance.cc  messaging_performance.hh
src/platform-test/cases/oneshot_timer/: oneshot_timer.cc  oneshot_timer.hh
src/platform-test/cases/parallelism/: parallelism.cc  parallelism.hh
src/platform-test/cases/periodic_timer/: periodic_timer.cc  periodic_timer.hh
src/platform-test/cases/shared_memory/: shared_memory.cc  shared_memory.hh
src/platform-test/framework/: CMakeLists.txt  ipc_socket.cc  ipc_socket.hh  logging.hh  params_parser.cc  params_parser.hh  test_case.cc  test_case.hh  test_runner.cc  test_runner.hh
src/platform-test/scripts/: CMakeLists.txt  regression.json  regression.py  stability.py  test_recovery.py  test_regression.py  test_suite.json
src/platform/components/: CMakeLists.txt
src/platform/components/cores/: CMakeLists.txt  cores.c  masks.c  queue_groups.c  queue_groups.h
src/platform/components/exception/: CMakeLists.txt  callstack.c  callstack.h  exception.c  recovery.c  recovery.h  signal_handlers.c  signal_handlers.h
src/platform/components/input/: CMakeLists.txt  input.c  input.h
src/platform/components/log/: CMakeLists.txt  log.c  log.h  runtime_logger.c  runtime_logger.h  startup_logger.c  startup_logger.h
src/platform/components/memory/: CMakeLists.txt  memory.c  memory.h  setup.c  setup.h
src/platform/components/messaging/: CMakeLists.txt  message.c  message.h  router.c  router.h  setup.c  setup.h
src/platform/components/messaging/local/: CMakeLists.txt  buffering.c  buffering.h  router.c  router.h
src/platform/components/messaging/network/: CMakeLists.txt  mac_spoofing.c  mac_spoofing.h  pktio.c  pktio.h  router.c  router.h  setup.c  setup.h  translation.c  translation.h
src/platform/components/networking/: CMakeLists.txt  eth_if_setup.c  eth_if_setup.h  networking.c  networking.h
src/platform/components/startup/: CMakeLists.txt  command_line.c  command_line.h  cpus.c  cpus.h  event_dispatcher.c  event_dispatcher.h  event_machine_startup.c  event_machine_startup.h  load_applications.c  load_applications.h  main.c  open_data_plane_startup.c  open_data_plane_startup.h
src/platform/components/timing/: CMakeLists.txt  setup.c  setup.h  timer_instance.c  timer_instance.h  timer_table.c  timer_table.h  timing.c  timing.h  timing_daemon.c  timing_daemon.h
src/platform/components/work/: CMakeLists.txt  completion_daemon.c  completion_daemon.h  core_queue_groups.c  core_queue_groups.h  daemon.c  daemon.h  messaging.c  messaging.h  setup.c  setup.h  work.h  worker_table.c  worker_table.h  workers.c
src/platform/components/workers/: CMakeLists.txt  completion_daemon.c  completion_daemon.h  setup.c  setup.h  worker_table.c  worker_table.h  workers.c
src/platform/interface/menabrea/: common.h  cores.h  exception.h  input.h  log.h  memory.h  messaging.h  timing.h  workers.h
src/platform/scripts/: CMakeLists.txt  menabrea.py  menabrea_cleanup.sh  platform_config.json
src/test-harness/: CMakeLists.txt  ipc_socket.cc  ipc_socket.hh  logging.hh  main.cc  params_parser.cc  test_case.cc  test_runner.cc
src/test-harness/app/: CMakeLists.txt  main.cc
src/test-harness/interface/menabrea/test/: test_case.hh
src/test-harness/lib/: CMakeLists.txt  ipc_socket.cc  ipc_socket.hh  params_parser.cc  test_case.cc  test_runner.cc  test_runner.hh
src/test-harness/lib/interface/menabrea/test/: params_parser.hh
src/test-harness/scripts/: CMakeLists.txt  test_regression.py  test_stability.py
(+33 files in other folders)
